Bajar Cambios Mariana

--- a/src/autonoma/proyectoFinal/views/VentanaPrincipal.form
+++ b/src/autonoma/proyectoFinal/views/VentanaPrincipal.form
@@ -90,7 +90,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
-                          <Component id="btnGestionEmpleado1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnGestionEmpleado" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                           <Component id="btnGestionPaciente" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
@@ -128,7 +128,7 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
-                          <Component id="btnGestionEmpleado1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnGestionEmpleado" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="btnGestionPaciente" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="1" attributes="0">
@@ -255,14 +255,14 @@
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JPanel" name="btnGestionEmpleado1">
+        <Container class="javax.swing.JPanel" name="btnGestionEmpleado">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnGestionEmpleado1MouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnGestionEmpleadoMouseClicked"/>
           </Events>
 
           <Layout>
